# zakharos_core

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .gitmodules  .project  README.md  build.sh  requirements.txt  set_permissions.sh  source_env.sh  zakharos_core.code-workspace  zk_build.sh
schematic/: schematic.fzz
scripts/: tool_make_exec.sh
src/aliveos/: CMakeLists.txt  package.xml
src/aliveos/launch/: init.launch
src/aliveos_app/: CMakeLists.txt  package.xml  setup.py
src/aliveos_app/src/aliveos_app/: README.md  __init__.py  ego_node.py  exceptions.py  generic_mind_node.py  instinct_node.py  node_types.py  reflex_node.py
src/aliveos_demo/: CMakeLists.txt  package.xml  setup.py
src/aliveos_demo/launch/: test_simple.launch
src/aliveos_demo/nodes/: simple_device.py  simple_ego_cc_dsc.json  simple_reflex_cc_dsc.json
src/aliveos_hw/: CMakeLists.txt  package.xml  setup.py
src/aliveos_hw/src/aliveos_hw/: __init__.py  abstract_device.py  abstract_hardware_server.py
src/aliveos_launch/: CMakeLists.txt  package.xml
src/aliveos_launch/launch/: _emotion_core.launch  _interpreters.launch  aliveos.launch
src/aliveos_middle/: CMakeLists.txt  package.xml  setup.py
src/aliveos_middle/cpp/include/: aliveos_emotion_core_node.hpp
src/aliveos_middle/cpp/src/: aliveos_emotion_core_node.cpp  main.cpp
src/aliveos_middle/nodes/: concept2commands_interpreter.py  data2concept_interpreter.py
src/aliveos_middle/py/aliveos_middle/: __init__.py  command_concept_abstract.py  concept2commands_interpreter.py  data2concept_interpreter.py
src/aliveos_msgs/: CMakeLists.txt  README.md  package.xml
src/aliveos_msgs/json/: command-concept-dsc.json  emotion-core-animal-params.json  emotion-core-animal-weights.json  emotion-core-data-descriptor.json  emotion-core-generic-weights.json  perception-concept-descriptor.json
src/aliveos_msgs/launch/param/: services.launch  topics.launch
src/aliveos_msgs/msg/: DeviceCmd.msg  DeviceData.msg  EmotionParams.msg
src/aliveos_msgs/srv/: CommandConceptDescriptor.srv  Hw.srv  PerceptionConceptDescriptor.srv
src/aliveos_py/: .gitignore  CMakeLists.txt  README.md  aliveos_py.code-workspace  package.xml  setup.cfg  setup.py
src/aliveos_py/src/aliveos_py/: __init__.py
src/aliveos_py/src/aliveos_py/helpers/: __init__.py  debug_tools.py  format_tools.py  json_tools.py  list_tools.py  os_tools.py
src/aliveos_py/src/aliveos_py/ros/: __init__.py  get.py  services.py  topics.py
src/aliveos_test/: CMakeLists.txt  package.xml  setup.py
src/aliveos_test/launch/: test_simple.launch
src/aliveos_test/nodes/: simple_device _pc_dsc.json  simple_device.py  simple_ego.py  simple_instinct.py  simple_instinct_cc_dsc.json  simple_reflex.py
src/zakhar/: CMakeLists.txt  package.xml
src/zakhar/scripts/: launch.py
src/zakhar/src/zakhar/: __init__.py
src/zakhar_common/: CMakeLists.txt  package.xml  setup.py
src/zakhar_common/src/zakhar_common/: __init__.py  functions.py  get.py  names.py
src/zakhar_emotion_core/: CMakeLists.txt  package.xml
src/zakhar_emotion_core/include/: zakhar_emotion_core.h  zakhar_emotion_core_node.hpp
src/zakhar_emotion_core/src/: main.cpp  zakhar_emotion_core_node.cpp
src/zakhar_i2c/: CMakeLists.txt  README.md  package.xml  setup.py
src/zakhar_i2c/nodes/: i2c.py  i2c_server.py
src/zakhar_i2c/src/zakhar_i2c/: __init__.py  i2c_server.py  node.py  zk_i2c_device.py
src/zakhar_i2c_devices/: CMakeLists.txt  package.xml  setup.py
src/zakhar_i2c_devices/nodes/: face_platform.py  moving_platform.py  sensor_platform.py
src/zakhar_i2c_devices/src/zakhar_i2c_devices/: __init__.py  face_platform.py  moving_platform.py  sensor_abstract.py  sensor_photo_resistor.py  sensor_platform.py  sensor_sound_distance.py
src/zakhar_i2c_devices/tests/: test_sensor_platform_photo_resistor.py
src/zakhar_interpreters/: CMakeLists.txt  package.xml  setup.py
src/zakhar_interpreters/nodes/: concept2commands_interpreter.py  data2concept_interpreter.py
src/zakhar_interpreters/src/zakhar_interpreters/: __init__.py  command_concept_abstract.py  concept2commands_interpreter.py  concept2commands_interpreter_abstract.py  concepts.py  data2concept_interpreter.py
src/zakhar_launch/: CMakeLists.txt  package.xml
src/zakhar_launch/launch/: demo_emotion.launch  demo_reptile_plus_obstacles.launch  devices.launch  ll_interpreters.launch  low_level.launch  test_face.launch  test_motors.launch
src/zakhar_launch/launch/demos/: demo_reptile.launch
src/zakhar_launch/launch/low_level/: low_level.launch
src/zakhar_launch/tests/: test_emotion_core.launch
src/zakhar_mind/: CMakeLists.txt  package.xml  setup.py
src/zakhar_mind/nodes/: concept_translator.py  ego_shivering_robot.py  ego_small_researcher.py  instinct_avoid_close_objects.py  instinct_bird_panic.py  reflex_avoid_close_objects.py  sensor_interpreter.py
src/zakhar_mind/scripts/: test_ego.py  test_manual_i2c.py
src/zakhar_mind/src/zakhar_mind/: __init__.py  concept_translator.py  concept_translator_abstract.py  concepts.py  ego_like.py  ego_shivering_robot.py  ego_small_researcher.py  instinct_avoid_close_objects.py  instinct_bird_panic.py  reflex_avoid_close_objects.py  sensor_interpreter.py
src/zakhar_mind/src/zakhar_mind/mind_classes/: __init__.py  ego_node.py  exceptions.py  instinct_node.py  (+3 more)
src/zakhar_mind_tests/: CMakeLists.txt  package.xml  setup.py
src/zakhar_mind_tests/nodes/: ego_face_test.py  ego_motors_test.py
src/zakhar_msgs/: CMakeLists.txt  package.xml
src/zakhar_msgs/msg/: DeviceCmd.msg  PerceptionConcept.msg  SensorConcept.msg  SensorData.msg
src/zakhar_msgs/srv/: CommandConcept.srv  Concept.srv  EmotionCoreDataDescriptor.srv  EmotionCoreWrite.srv  I2c.srv
src/zakhar_tests/: CMakeLists.txt  package.xml  setup.py
src/zakhar_tests/launch/: test_emotion_core.launch  test_face.launch  test_motors.launch  test_reflex_avoid.launch
src/zakhar_tests/nodes/: ego_emotion_reader.py  sensor_mock.py  test_ego_face.py  test_ego_motors.py
tools/i2c/: face_commander.py  moving_platform_commander.py  moving_platform_monitor.py  sensors_monitor.py
