<?xml version="1.0"?>
<package format="2">
  <name>aliveos</name>
  <version>0.1.0</version>
  <description>AliveOS is an operating system using ROS infrastructure. The OS implements structures of animal brains such as: reflexes, instincts, hormones, etc. </description>

  <author email="mail@agramakov.me">Andrei Gramakov</author>
  <maintainer email="mail@agramakov.me">Andrei Gramakov</maintainer>
  <license>GPLv3</license>
  <url type="website">https://github.com/an-dr/aliveos</url>

  <buildtool_depend>catkin</buildtool_depend>


</package>
