[metadata]
name = aliveos_py
author = Andrei Gramakov
author_email = mail@agramakov.me
version = 0.1.0
url = https://github.com/an-dr/aliveos_py
description = Python package used by AliveOS (https://github.com/an-dr/aliveos). The package contains addresses of devices, command codes, hardware interfaces, etc.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = robot, zakhar, robotics, aliveos
license = MIT
license-file = LICENSE
requires-dist = setuptools
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Framework :: Robot Framework :: Library

[options]
zip_safe = False
include_package_data = True
package_dir = src
packages = find:

[options.extras_require]
dev = setupext-janitor

[options.packages.find]
where = src

[flake8]
max-line-length = 120
max-complexity = 10
ignore = F405
per-file-ignores =
    */__init__.py:F401,F403
exclude =
    .git
    __pycache__
    docs/source/conf.py
    build
    dist
